--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Wan Yi Portcfolio</title>
+  <title>Wan Yi Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hi, my name is Wan Yi
+<div id="header">
+    <div class="container">
+      <nav>
+        <img src="images/logo.png"class="logo">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+</div>
+
   <script src="script.js"></script>
 </body>
 
