Add About Me Section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,65 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
+      <div class="header-text">
+        <p>Human Resources Analyst</p>
+        <h1>Hi,I'm <span>Wan Yi</span> <br>From Malaysia</h1>
     </div>
 </div>
+<!------------------about-------------------->
+<div id="about">
+  <div class="container">
+    <div class="row">
+      <div class="about-col-1"><img src="images/user.png"></div>
+      <div class="about-col-2">
+        <h1 class="sub-title">About Me</h1>
+        <p>Planning to change my career path to software developer after completing the course in Sigma School. Currently I am a Senior Human Resources Executive in Compensation and Benefits area. My study background is Bachelor of Science and Mathematics with Honours. </p>
+        <div class="tab-titles">
+          <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+          <p class="tab-links" onclick="opentab('experience')">Experience</p>
+          <p class="tab-links" onclick="opentab('education')">Education</p>
+        </div>
+        <div class="tab-contents active-tab" id="skills">
+          <ul>
+            <li><span>Web Development</span><br>Web app Development</li>
+            <li><span>App Development</span><br>Building Android/iOS apps</li>
+            <li><span>Microsoft Excel</span><br>Automate calculation using formula</li>
+          </ul>
+        </div>
+        <div class="tab-contents" id="experience">
+          <ul>
+            <li><span>2024 - Current</span><br>Senior HR Executive at Shui Xing Ventures Sdn Bhd</li>
+            <li><span>2022 - 2024</span><br>Senior HR Executive at Ann Joo Management Services Sdn Bhd</li>
+            <li><span>2021 - 2022</span><br>Executive at Pine Packaging(M) Sdn Bhd</li>
+          </ul>
+        </div>
+        <div class="tab-contents" id="education">
+          <ul>
+            <li><span>2017 - 2021</span><br>Bachelor of Science and Mathamatics with Honours at Universiti Putra Malaysia (CGPA:3.978)</li>
+            <li><span>2016 - 2017</span><br>Science PST Module 1 at Johor Matriculation College (CGPA: 4.0)</li>
+            <li><span>2011 - 2015</span><br>SPM at Sekolah Menengah Jenis Kebangsaan Pei Hwa (SPM: 10A)</li>
+          </ul>
+        </div>
+      </div>
+    </div>  
+  </div>  
+</div>
+<!--------------services-------------------->
 
-  <script src="script.js"></script>
+  
+  <script>
+    var tablinks = document.getElementsByClassName("tab-links");
+    var tabcontents = document.getElementsByClassName("tab-contents");
+    function opentab(tabname) {
+      for (tablink of tablinks) { tablink.classList.remove("active-link");
+      }
+      for (tabcontent of tabcontents) { tabcontent.classList.remove("active-tab");
+      }
+      event.currentTarget.classList.add("active-link");
+document.getElementById(tabname).classList.add("active-tab");
+    
+    }
+  </script>
 </body>
 
 </html>
